CODE: moved examples to new file ADD: NGL.Alignment class FIX: css menu should overflow: auto

--- a/css/dark.css
+++ b/css/dark.css
@@ -156,6 +156,8 @@ input.Number {
 
         #menubar .menu:hover .options {
             display: block;
+            max-height: 600px;
+            overflow: auto;
         }
 
             #menubar .menu .options hr {
